tests/golden/type_errors/struct_method_field_conflict.cd
struct Person { name: string }

impl Person {
  fun name(): string { return this.name; }
}
